--- a/portfolio-admin/package.json
+++ b/portfolio-admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react",
+  "name": "portfolio-admin",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "firebase": "^12.8.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-qr-code": "^2.0.18",
-    "react-router-dom": "^7.12.0",
-    "react-transition-group": "^4.4.5"
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -29,7 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
   }
 }
